--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -5,24 +5,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="index.css">
+
   <title> QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- 
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+   -->
+
+   <style ></style>
+
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+  <div class="qr-component">
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
+    <div class="qr-image">
+      <img src="./images/image-qr-code.png">
+    </div>
+
+    <div class="qr-text">
+      
+      <div class="qr-head-text">
+        <div>
+          Improve your front-end skills by building projects
+        </div>
+      </div>
+
+      <div class="qr-body-text">
+        <div>
+        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
